--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "parcel Coding_Assignments/index.html --open",
     "build": "parcel build Coding_Assignments/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/NishantGautam023/Namaste-React#readme",
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   },
