--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/NishantGautam023/Namaste-React#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@testing-library/react": "^13.4.0",
+    "babel-jest": "^29.4.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
